@@ -90,7 +90,7 @@ bool CGUIWindowSettingsCategory::OnAction(const CAction &action)
       JumpToPreviousSection();
       return true;
     }
-    m_lastControlID = -1; // don't save the control as we go to a different window each time
+    m_lastControlID = 0; // don't save the control as we go to a different window each time
     m_gWindowManager.PreviousWindow();
     return true;
   }
